Opening animations complete. Known Bug: Greeting text not centered

--- a/main.css
+++ b/main.css
@@ -1,4 +1,11 @@
+html {
+	//height: 100%;
+}
+
 body {
+	//height: 100%;
+	//margin: 0;
+	overflow: hidden; 
 	background-color: #1a1a1a; // black
 	//background-color: #3D72A4; // blue
 }
@@ -6,20 +13,21 @@ body {
 #greeting div {
 	display: none;
 	color: white;
-	position: fixed;
+	//border: 3px solid green;
+	position: absolute;
+	margin: auto;
 	text-align: center;
-	bottom: 0px;
 	width: 100%;
 	font-size: 30px;
 	font-family: serif;
 }
 
-#greeting > div {
-	height: -10px;
+#first {
+	bottom: 0px;
 }
 
-#second #third {
-	margin-top: 490px;
+#second, #third {
+	top: 250px;
 }
 
 h1 {
@@ -36,6 +44,24 @@ h1 {
 	border-radius: 5px;
 	margin: auto;
 	display: none;
+}
+
+#name {
+	background: #333;
+	border-radius: 5px;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translateX(-50%)  translateY(-50%);
+	opacity: 0.7;
+	display: none;
+}
+
+#name > p {
+	color: white;
+	font-family: serif;
+	text-align: center;
+	line-height: 35px;
 }
 
 #user {
@@ -56,6 +82,7 @@ h1 {
 #user > div > div > input {
 	width: 250px;
 	height: 35px;
+	position: absolute;
 	background: transparent;
 	color: white;
 	border-radius: 5px;
@@ -72,7 +99,19 @@ h1 {
 #user > div > #btn > #submit {
 	width: 100px;
 	height: 35px;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translateX(-50%)  translateY(-50%);
+	margin-top: 60px;
 	cursor: pointer;
+}
+
+#username {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translateX(-50%)  translateY(-50%);
 }
 
 .welcome {
@@ -92,7 +131,7 @@ h1 {
 }
 
 #form {
-	display: inline-block;
+	//display: inline-block;
 	margin: auto;
 	position: center;
 }
